Fixed behaviour on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 ﻿body{
   background-color: #DFDFDF;
+  height: auto; 
+  width: auto;
+  min-width: 1000px;
+  margin: 0 auto; 
 }
 
 .card{
